[GPU Process]: Don't call flushDrawingContext() in the middle of recording drawing commands https://bugs.webkit.org/show_bug.cgi?id=220126

Reviewed by Simon Fraser.

Source/WebCore:

Avoid calling flushDrawingContext() except when the drawing is finished
and the backend of the ImageBuffer is about to be used.

Rename flushDrawingContextAndCommit() to flushDrawingContextAsync(). The
difference between flushDrawingContext() and flushDrawingContextAsync()
is the former waits for the flush reply message.

* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::prepareForDisplay):
* platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::flushDrawingContextAsync):
(WebCore::ImageBuffer::flushDrawingContextAndCommit): Deleted.
* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::drawImageBuffer):
(WebCore::DisplayList::Recorder::didAppendItemOfType): Deleted.
* platform/graphics/displaylists/DisplayListRecorder.h:
(WebCore::DisplayList::Recorder::Delegate::willAppendItemOfType):
(WebCore::DisplayList::Recorder::append):
(WebCore::DisplayList::Recorder::Delegate::didAppendItemOfType): Deleted.

Source/WebKit:

There is no need to replay back the DrawImageBuffer immediately after it
was recorded. The worry was the source ImageBuffer may change before
replaying back the DrawImageBuffer into the destination ImageBuffer. But
this should not happen with the shared memory buffer because the order
of drawing among multiple ImageBuffer is preserved.

* Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::display):
* WebProcess/GPU/graphics/RemoteImageBufferProxy.h:


Canonical link: https://commits.webkit.org/232676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271079 268f45cc-cd09-0410-ab3c-d52691b4dbfc