Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp
@@ -2042,7 +2042,7 @@ GraphicsContext* CanvasRenderingContext2DBase::drawingContext() const
 void CanvasRenderingContext2DBase::prepareForDisplay()
 {
     if (auto buffer = canvasBase().buffer())
-        buffer->flushDrawingContextAndCommit();
+        buffer->flushDrawingContextAsync();
 }
 
 bool CanvasRenderingContext2DBase::needsPreparationForDisplay() const
